--- a/flight_aggregator_service/src/main/resources/application.yaml
+++ b/flight_aggregator_service/src/main/resources/application.yaml
@@ -4,7 +4,15 @@ server:
     include-message: always
 
 spring:
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
   datasource:
-    url : jdbc:postgresql://qa-test-database.c9sk8hydz12p.eu-central-1.rds.amazonaws.com:5432/postgres
+    url: jdbc:postgresql://qa-test-database.c9sk8hydz12p.eu-central-1.rds.amazonaws.com:5432/postgres
     username: postgres
     password: rootroot
+
+route:
+  queue:
+    url: https://sqs.eu-central-1.amazonaws.com/423073966355/flight_routes_queue
