--- a/flight_aggregator_service/pom.xml
+++ b/flight_aggregator_service/pom.xml
@@ -26,14 +26,6 @@
       <groupId>org.springframework.boot</groupId>
     </dependency>
     <dependency>
-      <artifactId>spring-data-jpa</artifactId>
-      <groupId>org.springframework.data</groupId>
-    </dependency>
-    <dependency>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-      <groupId>org.springframework.boot</groupId>
-    </dependency>
-    <dependency>
       <artifactId>springdoc-openapi-ui</artifactId>
       <groupId>org.springdoc</groupId>
       <version>1.5.11</version>
@@ -47,10 +39,6 @@
       <artifactId>spring-boot-configuration-processor</artifactId>
       <groupId>org.springframework.boot</groupId>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <artifactId>postgresql</artifactId>
-      <groupId>org.postgresql</groupId>
     </dependency>
     <dependency>
       <artifactId>aws-java-sdk</artifactId>
@@ -72,7 +60,7 @@
           <execution>
             <configuration>
               <mainClass>
-                com.example.rest.api.Application
+                com.funwithflights.Application
               </mainClass>
             </configuration>
             <goals>
