--- a/flight_aggregator_service/pom.xml
+++ b/flight_aggregator_service/pom.xml
@@ -26,6 +26,14 @@
       <groupId>org.springframework.boot</groupId>
     </dependency>
     <dependency>
+      <artifactId>spring-data-jpa</artifactId>
+      <groupId>org.springframework.data</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <groupId>org.springframework.boot</groupId>
+    </dependency>
+    <dependency>
       <artifactId>springdoc-openapi-ui</artifactId>
       <groupId>org.springdoc</groupId>
       <version>1.5.11</version>
@@ -49,6 +57,10 @@
       <artifactId>gson</artifactId>
       <groupId>com.google.code.gson</groupId>
       <version>2.8.9</version>
+    </dependency>
+    <dependency>
+      <artifactId>postgresql</artifactId>
+      <groupId>org.postgresql</groupId>
     </dependency>
   </dependencies>
 
