--- a/flight_info_service/pom.xml
+++ b/flight_info_service/pom.xml
@@ -57,6 +57,10 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
       <groupId>org.springframework.boot</groupId>
     </dependency>
+    <dependency>
+      <artifactId>postgresql</artifactId>
+      <groupId>org.postgresql</groupId>
+    </dependency>
   </dependencies>
 
   <build>
